--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "lint": "xo",
     "test": "jest"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ThanosDi/azure-table-query-recursive.git"
+  },
   "license": "MIT",
   "dependencies": {
     "azure-storage": "^2.10.3"
@@ -18,6 +22,15 @@
     "nodemon": "^1",
     "xo": "^0.24.0"
   },
+  "keywords": [
+    "azure",
+    "table storage",
+    "continuation token",
+    "query azure table storage",
+    "query azure table storage recursive",
+    "async azure table storage",
+    "await azure table storage"
+  ],
   "lint-staged": {
     "*": [
       "xo --fix",
