--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,9 @@ jobs:
       - run: *yarn-install
       - save_cache: *save-yarn-cache
       - run: *yarn-test
+      - store_artifacts:
+          path: coverage
+
   npm_publish:
     docker:
       - image: circleci/node:10
