--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "lint": "xo",
-    "test": "jest --collectCoverage=true"
+    "test": "jest --collectCoverage=true",
+    "test-ci": "jest --config config.json --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
@@ -16,6 +17,7 @@
     "azure-storage": "^2.10.3"
   },
   "devDependencies": {
+    "coveralls": "^3.0.6",
     "husky": "^3.0.4",
     "jest": "^24.9.0",
     "lint-staged": "^9.2.3",
